# python-template

./: .flake8  CONTRIBUTING.md  README.md  environment.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/hooks/: pre-commit  pre-push
.github/workflows/: unit_tests.yml
python_template/: hello_world.py
